--- a/values.yml
+++ b/values.yml
@@ -3,10 +3,8 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
-
 image:
-  repository: akhilak/packetgen
-  tag: latest
+  name: akhilak/packetgen
   pullPolicy: IfNotPresent
 
 nameOverride: ""
@@ -30,22 +28,25 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
+
 resources:
   limits:
     cpu: 200m
     memory: 256Mi
+ # requests:
+ #   cpu: 10m
+ #   memory: 10Mi
 
-# resources:
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+
+
+
+
+# resources: {}
   # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+  #  cpu: 100m
+  #  memory: 128Mi
+  #  requests:
+  #     memory: 256Mi
 
 nodeSelector: {}
 
