--- a/packetgen/values.yaml
+++ b/packetgen/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
-
+favoriteDrink: coffee
 image:
   repository: akhilak/packetgen
   tag: latest
@@ -34,6 +34,22 @@ resources:
   limits:
     cpu: 200m
     memory: 256Mi
+
+network:
+  #demo_artifacts_version=1.3.0
+  #vfw_private_ip_0='192.168.10.3'
+  #vfw_private_ip_1='192.168.20.2'
+  #vfw_private_ip_2='10.10.100.3'
+  #vpg_private_ip_0='192.168.10.2'
+  #vpg_private_ip_1='10.0.100.2'
+  #vsn_private_ip_0='192.168.20.3'
+  #vsn_private_ip_1='10.10.100.4'
+  #dcae_collector_ip='10.0.4.1'
+  #dcae_collector_port='8081'
+  #protected_net_gw='192.168.20.100'
+  protectednetcidr: 192.168.20.0/24
+  protectedprivatenetcidr: 192.168.10.0/24
+  onapprivatenetcidr: "10.10.0.0/16"
 
 # resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
