Got the quote for subnet working.

--- a/packetgen/templates/onap-private-net.yaml
+++ b/packetgen/templates/onap-private-net.yaml
@@ -8,6 +8,6 @@ spec:
     "type": "bridge",
     "ipam": {
         "type": "host-local",
-        "subnet": "10.10.10.0/16"
+        "subnet": {{ .Values.network.onapprivatenetcidr | quote }}
     }
 }'
