--- a/hybrid/firewall/templates/deployment.yaml
+++ b/hybrid/firewall/templates/deployment.yaml
@@ -46,9 +46,9 @@ spec:
         VirtletRootVolumeSize: 5Gi
         k8s.v1.cni.cncf.io/networks: '[{ "name": "$ovn_multus_network_name"}]'
         ovnNetwork: '[
-            { "name": "$unprotected_private_net", "ipAddress": "$vfw_private_ip_0", "interface": "eth1" , "defaultGateway": "false"},
-            { "name": "$protected_private_net", "ipAddress": "$vfw_private_ip_1", "interface": "eth2", "defaultGateway": "false" },
-            { "name": "$onap_private_net", "ipAddress": "$vfw_private_ip_2", "interface": "eth3" , "defaultGateway": "false"}
+            { "name": {{ .Values.network.unprotectedNetworkName | quote }}, "ipAddress": {{ .Values.network.vfwPrivateIp0 | quote }}, "interface": "eth1" , "defaultGateway": "false"},
+            { "name": {{ .Values.network.protectedNetworkName | quote }}, "ipAddress": {{ .Values.network.vfwPrivateIp1 | quote }}, "interface": "eth2", "defaultGateway": "false" },
+            { "name": {{ .Values.network.onapPrivateNetworkName | quote }}, "ipAddress": {{ .Values.network.vfwPrivateIp2 | quote }}, "interface": "eth3" , "defaultGateway": "false"}
         ]'
         kubernetes.io/target-runtime: virtlet.cloud
     spec:
