Firewall with all files

--- a/hybrid/firewall/templates/onap-private-net.yaml
+++ b/hybrid/firewall/templates/onap-private-net.yaml
@@ -4,6 +4,6 @@ metadata:
   name: {{ .Values.network.onapPrivateNetworkName }}
   cnitype : ovn4nfvk8s
 spec:
-  name: {{ .Values.network.onapPrivateNetworkName }}} 
+  name: {{ .Values.network.onapPrivateNetworkName }} 
   subnet: {{ .Values.network.onapPrivateNetCidr }}
   gateway: 10.10.0.1/16
