--- a/hybrid/firewall/templates/deployment.yaml
+++ b/hybrid/firewall/templates/deployment.yaml
@@ -36,19 +36,19 @@ spec:
             # the password is "admin"
             passwd: "\$6\$rounds=4096\$QA5OCKHTE41\$jRACivoPMJcOjLRgxl3t.AMfU7LhCFwOWv2z66CQX.TSxBy50JoYtycJXSPr2JceG.8Tq/82QN9QYt3euYEZW/"
             ssh_authorized_keys:
-              $ssh_key
+             # $ssh_key
           $proxy
           runcmd:
             $cloud_init_proxy
-            - wget -O - https://git.onap.org/multicloud/k8s/plain/vagrant/tests/vFW/$firewall_deployment_name | sudo -E bash
+            - wget -O - https://git.onap.org/multicloud/k8s/plain/kud/tests/vFW/firewall | sudo -E bash
         VirtletSSHKeys: |
-          $ssh_key
+         # $ssh_key
         VirtletRootVolumeSize: 5Gi
         k8s.v1.cni.cncf.io/networks: '[{ "name": "$ovn_multus_network_name"}]'
         ovnNetwork: '[
             { "name": {{ .Values.network.unprotectedNetworkName | quote }}, "ipAddress": {{ .Values.network.vfwPrivateIp0 | quote }}, "interface": "eth1" , "defaultGateway": "false"},
             { "name": {{ .Values.network.protectedNetworkName | quote }}, "ipAddress": {{ .Values.network.vfwPrivateIp1 | quote }}, "interface": "eth2", "defaultGateway": "false" },
-            { "name": {{ .Values.network.onapPrivateNetworkName | quote }}, "ipAddress": {{ .Values.network.vfwPrivateIp2 | quote }}, "interface": "eth3" , "defaultGateway": "false"}
+           #{ "name": {{ .Values.network.onapPrivateNetworkName | quote }}, "ipAddress": {{ .Values.network.vfwPrivateIp2 | quote }}, "interface": "eth3" , "defaultGateway": "false"}
         ]'
         kubernetes.io/target-runtime: virtlet.cloud
     spec:
