--- a/hybrid/firewall/values.yaml
+++ b/hybrid/firewall/values.yaml
@@ -32,9 +32,11 @@ ingress:
 
 resources:
   memory: 4Gi
-
+#vFirewall vars
 network:
+
   #demo_artifacts_version=1.3.0
+  firewallDeploymentName: firewall 
   vfwPrivateIp0: 192.168.10.3
   vfwPrivateIp1: 192.168.20.2
   vfwPrivateIp2: 10.10.100.3
@@ -53,6 +55,7 @@ network:
   unprotectedNetworkName: unprotected-private-net
   ovnMultusNetworkName: ovn-networkobj
   onapPrivateNetworkName: onap-private-net
+  ovnMultusNetworkName: ovn-multus-network-name
 
 nodeSelector: {}
 
