--- a/hybrid/packetgen/templates/deployment.yaml
+++ b/hybrid/packetgen/templates/deployment.yaml
@@ -40,7 +40,7 @@ spec:
           $proxy
           runcmd:
           $cloud_init_proxy
-            - wget -O - https://git.onap.org/multicloud/k8s/plain/vagrant/tests/vFW/$packetgen_deployment_name | sudo -E bash
+            - wget -O - https://git.onap.org/multicloud/k8s/plain/kud/tests/vFW/packetgen | sudo -E bash
         VirtletSSHKeys: |
           $ssh_key
         VirtletRootVolumeSize: 5Gi
